# open-task-light

./: .gitignore  .gitmodules  README.md  working parts list.csv
DIYson/Code/diyson/: diyson.ino
DIYson/Mechanical/Fusion/: DIYson LED assembly.f3z
DIYson/Mechanical/STEP/: LED Cover - Bottom.step  LED Cover - Top.step  Lighting Assembly Mount.step
DIYson/PCB/BOM/: Bill of Materials-DIYson.csv
DIYson/PCB/Gerber/: DIYson-macro.APR_LIB  DIYson.EXTREP  DIYson.G1  DIYson.G2  DIYson.GBL  DIYson.GBO  DIYson.GBP  DIYson.GBS  DIYson.GM1  DIYson.GTL  DIYson.GTO  DIYson.GTP  DIYson.GTS  DIYson.REP  DIYson.RUL  DIYson.apr
DIYson/PCB/NC Drill/: DIYson.DRR  DIYson.LDP  DIYson.TXT
DIYson/PCB/Pick Place/: Pick Place for DIYson.csv
code/open-task-light/: .gitignore  CMakeLists.txt  README.md  partitions.csv  scopeloop.yaml  sdkconfig.defaults
code/open-task-light/arduino/: LD2410B.ino
code/open-task-light/components/otl_circadian/: CMakeLists.txt  otl_circadian.c
code/open-task-light/components/otl_circadian/include/: otl_circadian.h
code/open-task-light/components/otl_net/: CMakeLists.txt  otl_net.c
code/open-task-light/components/otl_net/include/: otl_net.h
code/open-task-light/esphome/: open-task-light.yaml
code/open-task-light/main/: CMakeLists.txt  Kconfig.projbuild  generate_build_info.cmake  idf_component.yml  otl_homekit.c  otl_homekit.h  otl_main.c  otl_main.c.tmp  otl_mqtt.c  otl_mqtt.h  otl_runtime.h
code/open-task-light/reference/: diyson_stable.ino
code/open-task-light/tools/: pwm_scope_watch.py  use-local-profile.sh
pcb/LED-Driver/v1.1/: Bill of Materials-OTL2_LED-Driver.csv
